gap fixed

--- a/style/main.css
+++ b/style/main.css
@@ -133,6 +133,7 @@ header{
     font-weight: 700;
     line-height: 35px;
     text-decoration-line: underline;
+    margin-top: 20px;
 }
 
 /* service related style */
